tooling/nargo_cli/tests/snapshots/execution_success/missing_closure_env/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field) {
    let x1: &mut Field = &mut 42;
    let set_x1: fn[(&mut Field,)](Field) = |y: Field| { *(x1) = y; };
    assert(*x1 == 42);
    set_x1(44);
    assert(*x1 == 44);
    set_x1(*x1);
    assert(*x1 == 44);
    assert(x == 42);
}

#[test]
fn test_main() {
    main(42);
}
